--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2ff2288
+	base = 716d980
 	trimbase = 
 	parent = release/kinetic/libcreate
-	previous = 
+	previous = 2ff2288
