--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cd98f49
+	base = 3ad66f6
 	trimbase = 
 	parent = arch/kinetic/libcreate
-	previous = 
+	previous = cd98f49
