--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6d1a6a6
+	base = a66750a
 	trimbase = 
 	parent = release/lunar/libcreate
-	previous = 
+	previous = 6d1a6a6
