--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cf15415
+	base = 6e4662f
 	trimbase = 
 	parent = arch/lunar/libcreate
-	previous = 
+	previous = cf15415
